Fix alignment of navbar menu text on wiki

--- a/wwwroot/header-navbar-wiki-overrides.css
+++ b/wwwroot/header-navbar-wiki-overrides.css
@@ -16,7 +16,7 @@ ul, menu, dir {
 
 /* I hate phpbb */
 .header-navbar-menu {
-	margin-top: 8px;
+	margin-top: 9px;
 }
 
 /* Now this si jsut getting pathetic -_- */
